Add API-Endpoint and definition for update_domain
Enables updating/synchronizing domains in background
to avoid front end timing out when updating too many domains
